Fix centering of search form on mobile

--- a/frontend/frontend.css
+++ b/frontend/frontend.css
@@ -199,7 +199,7 @@ div.visible {
 	}
 
 	#search {
-		margin: 0 0 1em 1em !important;
+		margin: 0 1em 1em !important;
 	}
 
 	.tooltip {
